# sidecars-api

./: .gitignore  Makefile  aws-template.json  samconfig.toml  template.yaml
.github/workflows/: build.yaml  deploy.yaml
lambda/: Cargo.toml
lambda/healthcheck/: cargo.toml  healthcheck.rs
lambda/src/: function_b.rs  healthcheck.rs  whoami.rs
lambda/src/apis/: github.rs
lambda/src/endpoints/github/: outgoingprs.rs
lambda/src/endpoints/healthcheck/: ok.rs
