[package]
name = "sidecars"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.37"
jsonwebtoken = "9.3.0"
lambda_runtime = "0.11.1"
openssl = { version = "0.10.64", features = ["vendored"] }
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[dependencies.lambda_http]
version = "0.11.1"
default-features = false
features = ["apigw_http"]

# standard crate data is left out
[dev-dependencies]
cargo-llvm-cov = ">= 0.6.9"

[[bin]]
name = "healthcheck_ok"
path = "src/endpoints/healthcheck/ok.rs"

[[bin]]
name = "github_outgoing_prs"
path = "src/endpoints/github/outgoingprs.rs"
